# src/Domain/Continent/BuildContinentApi/BuildContinentApi.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Domain\Continent\BuildContinentApi;
+
+use App\Infrastructure\CQRS\DomainCommand;
+
+class BuildContinentApi extends DomainCommand
+{
+}
